--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECURITY_PASSWORD_SALT="qrcode123"
 SECRET_KEY = "thisisoursecretkey"
+MAIL_USERNAME="codesurfersdut@gmail.com"
+MAIL_PASSWORD="pmmwqdzwappsuemj"
