--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ SECURITY_PASSWORD_SALT="qrcode123"
 SECRET_KEY = "thisisoursecretkey"
 MAIL_USERNAME="codesurfersdut@gmail.com"
 MAIL_PASSWORD="pmmwqdzwappsuemj"
+DATABASE_URI = 'postgresql://admin_root:mw3SUugcexD929H@academicconnect.postgres.database.azure.com:5432/postgres'
