--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 SECURITY_PASSWORD_SALT="qrcode123"
 SECRET_KEY = "thisisoursecretkey"
 MAIL_USERNAME="codesurfersdut@gmail.com"
-MAIL_PASSWORD="pmmwqdzwappsuemj"
-DATABASE_URI = 'postgresql://admin_root:mw3SUugcexD929H@academicconnect.postgres.database.azure.com:5432/postgres'
+MAIL_PASSWORD="azqdkybqmpfvtger"
+DATABASE_URI2 = 'postgresql://admin_root:mw3SUugcexD929H@academicconnect.postgres.database.azure.com:5432/postgres'
+
+DATABASE_URI = 'sqlite:///project.db'
